--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Poppins';
+    src: url("/src/assets/fonts/poppins.ttf");
+}
+
+@font-face {
+    font-family: 'Billabong';
+    src: url("/src/assets/fonts/billabong.ttf");
+}
